<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_short_description">Scan all kinds of QR codes and barcodes with ease. 📷</string>
    <string name="no_lessons_found">No lessons found.</string>
    <string name="activity_not_found">Activity not found.</string>
    <string name="security_error">A security error occurred. Please try again later.</string>
    <string name="io_error">An input/output error occurred. Please check your network connection or storage and try again.</string>
    <string name="illegal_argument_error">Invalid input or argument provided. Please check the information and try again.</string>
    <string name="sqlite_error">Database error encountered. Please try the following steps:\n\n1. Restart the app.\n2. If the issue persists, clear app data from Settings > Apps > Android Studio Tutorials > Storage.\n3. Contact support if the problem continues.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="initialization_error">Initialization failed. Please try again later.</string>
    <string name="feedback">Feedback</string>
    <string name="view_in_google_play_store">View in Google Play Store</string>
    <string name="version_info">Version info</string>
    <string name="version">Version %1$s</string>
    <string name="beta_program">Beta program</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="summary_preference_settings_display">Personalize your app\'s look and feel</string>
    <string name="app_behavior">App behavior</string>
    <string name="navigation">Navigation</string>
    <string name="startup">Startup</string>
    <string name="startup_page">Startup page</string>
    <string name="summary_preference_settings_startup_page">Choose the screen to be displayed when the app starts.</string>
    <string name="dialog_startup_subtitle">Choose your preferred startup page:</string>
    <string name="dialog_info_startup">Configures the initial screen presented to users upon launching the application. This setting influences the user\'s first interaction with the app and can be tailored to specific user segments or product goals.</string>
    <string name="appearance">Appearance</string>
    <string name="dark_theme">Dark theme</string>
    <string name="will_turn_on_automatically_by_system">Will turn on automatically by the system</string>
    <string name="will_never_turn_on_automatically">Will never turn on automatically</string>
    <string name="amoled_mode">AMOLED mode</string>
    <string name="follow_system">Follow System Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="summary_dark_theme">Dark theme uses a deep background to help keep your battery alive longer</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="summary_preference_settings_dynamic_colors">Apply colors from wallpapers to the app theme</string>
    <string name="language">Language</string>
    <string name="summary_preference_settings_language">Changes the language used in the app</string>
    <string name="dialog_language_subtitle">Select your preferred language</string>
    <string name="normal">Normal</string>
    <string name="ad_id">Ad id [AD_ID]</string>
    <string name="summary_preference_permissions_ad_id">Allows the app to retrieve and use the advertising identifier associated with the user\'s device, providing personalized ads, measuring ad effectiveness, and showing ads on Android 13 or later devices.</string>
    <string name="internet">Internet [INTERNET]</string>
    <string name="summary_preference_permissions_internet">Allows the app to establish an internet connection to send error reports or check for updates.</string>
    <string name="post_notifications">Post notifications [POST_NOTIFICATIONS]</string>
    <string name="summary_preference_permissions_post_notifications">Allows the app to display notifications on the devices with Android 13 or later.</string>
    <string name="runtime">Runtime</string>
    <string name="access_network_state">Access network state [ACCESS_NETWORK_STATE]</string>
    <string name="summary_preference_permissions_access_network_state">Allows the app to check network connectivity and retrieve information about Wi-Fi, including enabled status and connected Wi-Fi device names.</string>
    <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
    <string name="summary_preference_permissions_access_notification_policy">Allows the app to access and modify the device\'s notification policy, controlling how and when notifications are displayed to the user and providing custom notification management features.</string>
    <string name="billing">Billing [BILLING]</string>
    <string name="summary_preference_permissions_billing">Allows the app to use the Google Play Billing Library to handle in-app purchases and donations</string>
    <string name="check_license">Check license [CHECK_LICENSE]</string>
    <string name="summary_preference_permissions_check_license">Allows the app to verify its compliance with the license agreement and enforce licensing terms to protect intellectual property.</string>
    <string name="foreground_service">Foreground service [FOREGROUND_SERVICE]</string>
    <string name="summary_preference_permissions_foreground_service">Allows the app to create and use services that run in the foreground, giving them priority over other background processes and improving performance and reliability.</string>
    <string name="about">About</string>
    <string name="scan">Scan</string>
    <string name="scan_image">Scan image</string>
    <string name="create">Create</string>
    <string name="qr_code">QR Code</string>
    <string name="content_from_clipboard">Content from clipboard</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="alternatively">Alternatively:</string>
    <string name="wifi">Wi-Fi</string>
    <string name="location">Location</string>
    <string name="contact_v_card">Contact (VCard)</string>
    <string name="more_qr_codes">More QR codes</string>
    <string name="barcode">Barcode</string>
    <string name="all_barcodes_codes">Barcodes and other 2D codes</string>
    <string name="history">History</string>
    <string name="export_as">Export as</string>
    <string name="export">Export</string>
    <string name="create_barcode">Create barcode</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="increase_brightness">Increase brightness</string>
    <string name="decrease_brightness">Decrease brightness</string>
    <string name="change_wifi_state">Wi-Fi [CHANGE_WIFI_STATE]</string>
    <string name="vibrate_permission">Vibrate [VIBRATE]</string>
    <string name="camera_permission">Camera [CAMERA]</string>
    <string name="read_contacts">Read contacts [READ_CONTACTS]</string>
    <string name="read_storage">Read storage [READ_EXTERNAL_STORAGE]</string>
    <string name="read_images">Read images [READ_IMAGES]</string>
    <string name="write_storage">Write storage [WRITE_EXTERNAL_STORAGE]</string>
    <string name="question_1">What is QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_2">What are the benefits of using QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_3">What are the system requirements for QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_4">How do I scan a QR code with QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_5"> How do I create a QR code with QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_6">How do I change the theme of QR &amp; Bar Code Scanner Plus?</string>
    <string name="question_7">How do I report a bug?</string>
    <string name="question_8">Is QR &amp; Bar Code Scanner Plus safe to use?</string>
    <string name="question_9">How do I contact the developer of the app?</string>
    <string name="summary_preference_faq_1">QR &amp; Bar Code Scanner Plus is a free app that allows you to scan and generate QR codes. It can scan all common barcode formats, including QR, Data Matrix, Aztec, UPC, EAN, and many more.</string>
    <string name="summary_preference_faq_2">QR &amp; Bar Code Scanner Plus is a powerful, versatile, and free app that can scan all common barcode formats, use a flashlight to scan in the dark, zoom to read barcodes from far distances, connect to Wi-Fi, generate QR codes from text, contacts, apps, bookmarks, and clipboard, and has a simple and intuitive interface.</string>
    <string name="summary_preference_faq_3">QR &amp; Bar Code Scanner Plus is compatible with all Android devices running Android 8.0 (Oreo) or higher.</string>
    <string name="summary_preference_faq_4">To scan a QR code with QR &amp; Bar Code Scanner Plus, simply open the app and point your phone\'s camera at the QR code. The app will automatically scan the code and display the results.</string>
    <string name="summary_preference_faq_5">To create a QR code with QR &amp; Bar Code Scanner Plus, open the app and go to the \'Create\' menu. Choose the type of QR code or bar code you want and enter the data you want to include in the QR code and tap on the \'Create\' button. The app will then generate a QR code that you can save or share.</string>
    <string name="summary_preference_faq_6">The theme of QR &amp; Bar Code Scanner Plus can be changed by going to the app\'s settings and selecting the desired theme.</string>
    <string name="summary_preference_faq_7">If you find a bug in QR &amp; Bar Code Scanner Plus, you can report it by going to the app\'s GitHub page and creating a new issue.</string>
    <string name="summary_preference_faq_8">QR &amp; Bar Code Scanner Plus is a safe app to use. The app only collects error logs through Firebase Crashlytics and Firebase Analytics, which can be turned off.</string>
    <string name="summary_preference_faq_9">If you have any questions or problems with the app, you can contact the developer through the app\'s \'Help &amp; feedback\' page.</string>
    <string name="summary_preference_permissions_change_wifi_state">Allows the app to connect to Wi-Fi networks by scanning QR codes.</string>
    <string name="summary_preference_permissions_vibrate">Allows the app to vibrate when a QR code is scanned.</string>
    <string name="summary_preference_permissions_camera">Allows the app to scan QR codes and barcodes from the camera.</string>
    <string name="summary_preference_permissions_read_contacts">Allows the app to create a QR code from a contact in your contact list.</string>
    <string name="summary_preference_permissions_read_storage">Allows the app to access your storage so you can save your QR code or barcode as text or image.</string>
    <string name="summary_preference_permissions_read_images">Allows the app to read images from your device so you can scan them for QR codes and barcodes on devices running Android 13 or later.</string>
    <string name="summary_preference_permissions_write_storage">Allows the app to write to your storage so you can save files, such as photos, videos, and documents.</string>
    <string name="summary_alternatively_url">- Open your browser app\n- Load a website\n- Click \"Share\" from the menu\n- Select this app.</string>
    <string name="tooltip_export">Export your history.</string>
    <string name="tooltip_add_to_favorites">Add to favorites</string>
    <string name="tooltip_view_code">View code</string>
    <string name="tooltip_save_as_text">Save as text</string>
    <string name="hint_file_name">File name</string>
</resources>