<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/normal">
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_ad_id"
            app:title="@string/ad_id"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_internet"
            app:title="@string/internet"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_change_wifi_state"
            app:title="@string/change_wifi_state"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_post_notifications"
            app:title="@string/post_notifications" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_vibrate"
            app:title="@string/vibrate_permission"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/runtime">
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_access_network_state"
            app:title="@string/access_network_state" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_access_notification_policy"
            app:title="@string/access_notification_policy" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_billing"
            app:title="@string/billing" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_camera"
            app:title="@string/camera_permission"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_check_license"
            app:title="@string/check_license" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_foreground_service"
            app:title="@string/foreground_service" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_read_contacts"
            app:title="@string/read_contacts"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_read_storage"
            app:title="@string/read_storage"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_read_images"
            app:title="@string/read_images"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="@string/summary_preference_permissions_write_storage"
            app:title="@string/write_storage"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>