<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_1"
        app:title="@string/question_1" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_2"
        app:title="@string/question_2" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_3"
        app:title="@string/question_3" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_4"
        app:title="@string/question_4" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_5"
        app:title="@string/question_5" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_6"
        app:title="@string/question_6" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_7"
        app:title="@string/question_7" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_8"
        app:title="@string/question_8" />
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_help_center"
        app:summary="@string/summary_preference_faq_9"
        app:title="@string/question_9" />
</androidx.preference.PreferenceScreen>