<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.d4rk.qrcodescanner.plus.ui.scan.ScanBarcodeFromCameraFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan_barcode_from_camera"/>
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.d4rk.qrcodescanner.plus.ui.create.CreateBarcodeFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create_barcode"/>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.d4rk.qrcodescanner.plus.ui.history.BarcodeHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_barcode_history"/>
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.d4rk.qrcodescanner.plus.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
</navigation>