<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <me.zhanghai.android.fastscroll.FastScrollNestedScrollView
        android:id="@+id/scroll_view"
        style="@style/ScrollStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/qr_code"
                style="@style/GroupTitleTextViewStyle"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_copy"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/content_from_clipboard"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_text"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/text"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_link"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/url"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_wifi"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/wifi"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_location"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/location"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_contact_vcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_contact_white"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/contact_v_card"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_show_all_qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_qr_code_white"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/more_qr_codes"
                app:isDelimiterVisible="false"
                app:isArrowVisible="true"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_big"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/barcode"
                style="@style/GroupTitleTextViewStyle"/>
            <com.d4rk.qrcodescanner.plus.ui.view.IconButtonWithDelimiter
                android:id="@+id/button_create_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_barcode"
                app:iconBackground="?attr/colorPrimary"
                app:text="@string/all_barcodes_codes"
                app:isDelimiterVisible="false"
                app:isArrowVisible="true"/>
        </LinearLayout>
    </me.zhanghai.android.fastscroll.FastScrollNestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>