<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_scan_from_camera"
        android:shortcutId="scanFromCamera"
        android:shortcutShortLabel="@string/scan">
        <intent
            android:action=".SCAN_FROM_CAMERA"
            android:targetClass="com.d4rk.qrcodescanner.plus.MainActivity"
            android:targetPackage="com.d4rk.qrcodescanner.plus" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_scan_from_file"
        android:shortcutId="scanFromFile"
        android:shortcutShortLabel="@string/scan_image">
        <intent
            android:action=".SCAN_FROM_FILE"
            android:targetClass="com.d4rk.qrcodescanner.plus.ui.screens.scan.file.ScanBarcodeFromFileActivity"
            android:targetPackage="com.d4rk.qrcodescanner.plus" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_create_barcode"
        android:shortcutId="createBarcode"
        android:shortcutShortLabel="@string/create_barcode">
        <intent
            android:action=".CREATE_BARCODE"
            android:targetClass="com.d4rk.qrcodescanner.plus.MainActivity"
            android:targetPackage="com.d4rk.qrcodescanner.plus" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_history"
        android:shortcutId="history"
        android:shortcutShortLabel="@string/history">
        <intent
            android:action=".HISTORY"
            android:targetClass="com.d4rk.qrcodescanner.plus.MainActivity"
            android:targetPackage="com.d4rk.qrcodescanner.plus" />
    </shortcut>
</shortcuts>