<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_margin"
    android:paddingTop="8dp"
    android:paddingBottom="@dimen/default_margin">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/url"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:lines="1"
        android:maxLines="1" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/GroupTitleTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_big"
        android:text="@string/alternatively" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/CreateBarcodeFragmentAlternativeTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summary_alternatively_url" />
</LinearLayout>
